gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test21930.d
version https://git-lfs.github.com/spec/v1
oid sha256:508562494ba76d265f549758f012d5024b8b8e3e5adebde1c6ca2bbe26395209
size 583
